[package]
name = "ctfsink"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
# panic = "abort"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5"}
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
ellipse = "0.2.0"
figment = { version = "0.10.19", features = ["env"] }
mime_guess = "2.0.4"
minijinja = "2.0.1"
once_cell = "1.19.0"
rust-embed = { version = "8.4.0", features = ["include-exclude"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
