[package]
name = "ctfsink"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
# panic = "abort"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4"}
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "env"] }
ellipse = "0.2.0"
figment = { version = "0.10.19", features = ["env"] }
mime_guess = "2.0.5"
minijinja = "2.10.2"
once_cell = "1.21.3"
rust-embed = { version = "8.7.2", features = ["include-exclude"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
