[package]
name = "ctfsink"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
# panic = "abort"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
clap = { version = "4.2.6", features = ["derive", "env"] }
ngrok = { version = "0.11.3", features = ["axum"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
